[Update]レイアウトを整える

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--
+
 <html>
   <head>
     <title>Bookers</title>
@@ -15,7 +15,7 @@
 
   <body>
 
-        <header>
+      <!--  <header>
       <h1 class="headline"> All Books </h1>
     </header>
     <nav>
@@ -28,7 +28,7 @@
         </li>
 
       </ul>
-    </nav>
+    </nav>-->
     <main>
 
     <%= yield %>
@@ -39,4 +39,4 @@
 
 
 </html>
--->
+
