--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,6 @@
-<% @books.each do |book| %>
-  <div class="book-box">
-    <div class="book-comment">
-      <span class="book-body"><%= book.body %></span>
-      <span class="book-title"><%=link_to book.title, book_path(book.id) %></span>
-    </div>
-  </div>
-<% end %>
-</div>
-
-
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
-
-<h1>投稿一覧</h1>
-
+<h1>Books</h1>
+<h4>Title</h4>
+<h4>body</h4>
 <% @books.each do |book| %>
 
 　<%= book.title%>
