--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,4 @@
-<!--<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>-->
-
-    <p id="notice">Book was successfully created.</p>
+<!--<p id="notice">Book was successfully created.</p>-->
 
 <p>
   <strong>Title:</strong>
@@ -13,18 +10,5 @@
   <%= @book.body %>
 </p>
 
-
-
-
-
-
-
-
-<p><%= @book.title %></p>
-
-<h2>本文</h2>
-<p><%= @book.body %></p>
-
-<%= link_to "編集", edit_book_path(@book.id) %>
-<%= link_to "削除", destroy_book_path(@book.id),method: :delete, "data-confirm" => "本当に削除しますか？" %>
-
+<%= link_to "Edit", edit_book_path(@book.id) %> |
+<%= link_to "Back", books_path(@book.id) %>
