--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,20 +1,22 @@
 <h1>Books</h1>
 <table>
- <h4>Title</h4>
- <h4>body</h4>
- <br>
- <% @books.each do |book| %>
+ <tr>
+  <th>Title</th>
+  <th>Body</th>
+ </tr>
 
- 　<%= book.title%>
+   <% @books.each do |book| %>
+ <tr>
+ 　<td><%= book.title%></td>
 
- 　<%= book.body%>
+ 　<td><%= book.body%></td>
 
- 　<%=link_to "Show",book_path(book.id) %>
-   <%=link_to "Edit",edit_book_path(book.id) %>
-　 <%=link_to "Destroy",destroy_book_path(book.id),method: :delete, "data-confirm" => "Are you sure?"%>
-  <br>
+ 　<td><%=link_to "Show",book_path(book.id) %></td>
+   <td><%=link_to "Edit",edit_book_path(book.id) %></td>
+　 <td><%=link_to "Destroy",destroy_book_path(book.id),method: :delete, "data-confirm" => "Are you sure?"%></td>
+    <% end %>
 
- <% end %>
+ </tr>
 </table>
 <h2>New Book</h2>
 <div class="field">
