--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <!--<p id="notice">Book was successfully created.</p>-->
-
+<%=   flash[:success]  %>
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
