[Update]Update,Destroy,Flash,Baride

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <!--<p id="notice">Book was successfully created.</p>-->
 <%=   flash[:success]  %>
+<%= flash[:notice] %>
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
