--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </ul>
 <% end %>
-<%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+<%= form_with model: @book do |f| %>
 
 <div class="field">
   <%= f.label :Title %>
@@ -22,6 +22,6 @@
 </div>
 
 <%=link_to "Show",book_path(@book.id) %> |
-<%= link_to "Back", books_path(@book.id) %>
+<%= link_to "Back", books_path %>
 
 <% end %>
