--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,16 +7,13 @@
 
    <% @books.each do |book| %>
  <tr>
- 　<td><%= book.title%></td>
-
- 　<td><%= book.body%></td>
-
- 　<td><%=link_to "Show",book_path(book.id) %></td>
+   <td><%= book.title%></td>
+   <td><%= book.body%></td>
+   <td><%=link_to "Show",book_path(book.id) %></td>
    <td><%=link_to "Edit",edit_book_path(book.id) %></td>
-　 <td><%=link_to "Destroy",book_path(book.id),method: :delete, "data-confirm" => "Are you sure?"%></td>
-    <% end %>
-
+   <td><%=link_to "Destroy",book_path(book.id),method: :delete, "data-confirm" => "Are you sure?"%></td>
  </tr>
+ <% end %>
 </table>
 
 
@@ -29,13 +26,14 @@
     <% end %>
   </ul>
 <% end %>
+
+<%= form_with model: @book, url: '/books', local:true do |f| %>
 <div class="field">
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
-  <%= f.label :Title %>
+  <%= f.label :title %>
   <%= f.text_field :title %>
 </div>
 <div class="field">
-  <%= f.label :Body %>
+  <%= f.label :body %>
   <%= f.text_area :body %>
 </div>
   <%= f.submit 'Create Book' %>
